bluec-tests/tests/invalid/types_longlong/bad_specifiers.c
int main(void) {
    /* Cannot declare a variable with two "int" specifiers */
    int long long int i = 0;
    return i;
}